--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+public/css/app.css
+public/mix-manifest.json
+public/js/app.js
+public/css/app.css
+public/*.js
